<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.casarder.todopick.ConfirmTextActivity"
    android:padding="16dp"
    android:background="@color/colorPrimaryBackground">

    <LinearLayout
        android:id="@+id/explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryLight">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_info"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:tint="@color/colorPrimaryBackground"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/separe_your_tasks_with_a_hifen"
            android:fontFamily="@font/lato"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryBackground"
            android:layout_marginStart="8dp"
            android:textSize="18dp"/>

    </LinearLayout>


    <EditText
        android:id="@+id/result_edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/explanation"
        android:hint="@string/your_tasks"
        android:fontFamily="@font/lato"
        android:layout_above="@+id/confirm_result_button"/>

    <Button
        android:id="@+id/confirm_result_button"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/confirm"
        android:fontFamily="@font/lato"
        android:textColor="@color/colorPrimaryBackground"
        android:textSize="18dp"
        android:textStyle="bold" />

</RelativeLayout>
