<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.casarder.todopick.CreateBoardActivity"
    android:background="@color/colorPrimaryBackground">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:fontFamily="@font/lato"
            android:maxLength="16384" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:layout_below="@id/input_layout_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:fontFamily="@font/lato"
            android:maxLength="16384" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp">
        <RadioButton
            android:id="@+id/public_opt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Public"
            android:fontFamily="@font/lato"
            android:textSize="18sp"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/private_opt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Private"
            android:fontFamily="@font/lato"
            android:textSize="18sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/create"
        android:fontFamily="@font/lato"
        android:textColor="@color/colorPrimaryBackground"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
